# solutions/hospital/notifications/notificationapi/notifications.swagger.json
@@ -36,9 +36,45 @@
           "Notification"
         ]
       }
+    },
+    "/api/notification/sms": {
+      "post": {
+        "operationId": "SendSms",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/notificationapiSendSmsReply"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/notificationapiSmsMessage"
+            }
+          }
+        ],
+        "tags": [
+          "Notification"
+        ]
+      }
     }
   },
   "definitions": {
+    "notificationapiDeliveryStatus": {
+      "type": "string",
+      "enum": [
+        "UNKNOWN",
+        "DELIVERED",
+        "PENDING",
+        "FAILED"
+      ],
+      "default": "UNKNOWN"
+    },
     "notificationapiEmailMessage": {
       "type": "object",
       "properties": {
@@ -62,14 +98,42 @@
         },
         "message": {
           "type": "string"
+        },
+        "details": {
+          "type": "string"
         }
       }
     },
     "notificationapiSendEmailReply": {
       "type": "object",
       "properties": {
+        "status": {
+          "$ref": "#/definitions/notificationapiDeliveryStatus"
+        },
         "error": {
           "$ref": "#/definitions/notificationapiError"
+        }
+      }
+    },
+    "notificationapiSendSmsReply": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "$ref": "#/definitions/notificationapiDeliveryStatus"
+        },
+        "error": {
+          "$ref": "#/definitions/notificationapiError"
+        }
+      }
+    },
+    "notificationapiSmsMessage": {
+      "type": "object",
+      "properties": {
+        "recipientPhoneNumber": {
+          "type": "string"
+        },
+        "body": {
+          "type": "string"
         }
       }
     }
